toolchain/internal/core/analysis/testdata/errors/naming/annotation_not_camel.vdl
// format:off
// @expect: E102

@badAnn
type User {
  id string
}
